k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: smartcoffee
  namespace: default
spec:
  selector:
    app: smartcoffee
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
